db-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
    tier: database
spec:
  selector: 
    matchLabels:
      app: mysql
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels: 
        app: mysql
        tier: database
    spec:
      containers:
        - image: mysql:5.7 
          args:
            - "--ignore-db-dir=lost+found"
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:   
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql 
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
