springboot-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-deployment
spec:
  selector:
    matchLabels:
      app: springboot-k8s-mysql
  replicas: 2
  template:
    metadata:
      labels:
        app: springboot-k8s-mysql
    spec:
      containers:
        - name: springboot-container
          image: mahi1822/springboot-application
          ports:
            - containerPort: 8080
