mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql 
  labels:
    app: mysql
    tier: database
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:   
    app: mysql
    tier: database
  clusterIP: None
