springboot-svc.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: springboot-svc
spec:
  selector:
    app: springboot-k8s-mysql
  ports:
    - protocol: "TCP"
      port: 8080 
      targetPort: 8080 
  type: LoadBalancer
